Temporary spacing fix

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -602,7 +602,6 @@ a.status__content__spoiler-link {
   flex-shrink: 0;
   cursor: default;
   color: $color3;
-  padding-bottom: 5px;
 
   strong {
     color: $color5;
